[gd_scene load_steps=3 format=3 uid="uid://3gyw37r83hf1"]

[ext_resource type="PackedScene" uid="uid://c6ltfavtyal47" path="res://commons/primitives/line/line_static.tscn" id="1_line"]
[ext_resource type="Script" uid="uid://dacygujyu2p16" path="res://commons/primitives/line/cube_lines.gd" id="2_script"]

[node name="CubeLines" type="Node3D"]
script = ExtResource("2_script")

[node name="Line1" parent="." instance=ExtResource("1_line")]

[node name="Line2" parent="." instance=ExtResource("1_line")]

[node name="Line3" parent="." instance=ExtResource("1_line")]

[node name="Line4" parent="." instance=ExtResource("1_line")]

[node name="Line5" parent="." instance=ExtResource("1_line")]

[node name="Line6" parent="." instance=ExtResource("1_line")]

[node name="Line7" parent="." instance=ExtResource("1_line")]

[node name="Line8" parent="." instance=ExtResource("1_line")]

[node name="Line9" parent="." instance=ExtResource("1_line")]

[node name="Line10" parent="." instance=ExtResource("1_line")]

[node name="Line11" parent="." instance=ExtResource("1_line")]

[node name="Line12" parent="." instance=ExtResource("1_line")]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
visible = false
text = "Cube (1mÂ³)"
outline_size = 4

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 1.5, 1, 2)
